--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test2",
+  "name": "sitesampling",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.2"
-  }
+  "license": "ISC"
 }
